css/styles.less
/* ... */
#folio-browser {
	width: "calc(100% - 48px)";
	position: relative;
	.folium-thumbnail {
		position: relative;
		cursor: pointer;
		display: inline-block;
		white-space: nowrap;
		padding: 2px 0px 4px 0px;
		margin-right: 1px;
		text-align: center;
		.no-select;
		img {
			width: 70px;
			height: 100px;
			display: block;
		}
		&.active {
			background-color: white;
			color: black;
			padding: 2px 2px 4px 2px;
		}
		.circle {
			@size: 26px;
			width: @size;
			height: @size;
			line-height: @size;
			border-radius: @size / 2;
			text-align: center;
			background-color: black;
			color: white;
			position: absolute;
			top: 50px - (@size/2); // thumbnails are 70x100
			z-index: 5000;

			&.r {
				right: -(@size/2);
			}
			&.v {
				left: -14px;
			}
		}
		&.active .circle {
			z-index: 5001;
			background-color: white;
			color: black;
		}
	}
	.horizontal-only
	{
		height: auto;
		min-height: 130px;
	}
	.close {
		font-size: 1em;
		cursor: pointer;
		background-color: #333;
		width: 20px;
		height: 20px;
		border-radius: 20px;
		text-align: center;
		line-height: 20px;
		right: 0;

		&:hover {
			background-color: lighten(#333, 20%);
		}
	}
}

#text-browser {
	display: none; // only on page load
	background-image: linear-gradient(bottom, rgb(102,102,102) 0%, rgb(0,0,0) 76%);
	background-image: -o-linear-gradient(bottom, rgb(102,102,102) 0%, rgb(0,0,0) 76%);
	background-image: -moz-linear-gradient(bottom, rgb(102,102,102) 0%, rgb(0,0,0) 76%);
	background-image: -webkit-linear-gradient(bottom, rgb(102,102,102) 0%, rgb(0,0,0) 76%);
	background-image: -ms-linear-gradient(bottom, rgb(102,102,102) 0%, rgb(0,0,0) 76%);

	background-image: -webkit-gradient(
		linear,
		left bottom,
		left top,
		color-stop(0, rgb(102,102,102)),
		color-stop(0.76, rgb(0,0,0))
	);

	ul {
		font-size: 12px;
		line-height: 22px;
		white-space: nowrap;
		float: left;
		width: 320px;
		li {
			cursor: pointer;
			width: 90%;
			overflow: hidden;
			white-space: nowrap;
			text-overflow: ellipsis;
			.no-select;
			a { color: white; }
			.noteright {
				position: static;
				color: white;
			}
			.superscript {
				display: none;
			}
			.capitalsize1 {
				display: inline;
			}
		}
	}
	.inner {
		width: 4600px;
		max-height: 160px;
	}
	.close {
		position: absolute;
		right: 0px;
		font-size: 1em;
		top: 0px;
		cursor: pointer;
	}
}

#folium, #sidebar, #text {
	display: inline;
	float: left;
	position: relative;
}

#folium {
	width: @folioWidth;
	margin-right: @foliumMargin;
	img { width: @folioWidth; height: auto; }
}

#sidebar {
	width: @sidebarWidth;
	margin-left: 20px;

	.line {
		margin-top: 35px;
		border-top: 1px solid @viewMenuActiveColor;
	}

	.belongs-to {
		width: 120px;
		color: @defaultGray;
		margin-bottom: 65px;
	}

	.annotations {
		span.noteright {
			// position: absolute;
			.formatAsAnnotation;
		}
	}
}

#text {
	width: @mainWidth - @folioWidth - @foliumMargin - @sidebarWidth - 20px;
	.nav {
		line-height: 35px;
		height: 35px;
		border-bottom: 1px solid @viewMenuActiveColor;
		margin-bottom: 20px;
		text-align: center;

		.previous { float: left; }
		.next { float: right; }
		.next, .previous {
			color: @bodyNavColor;
			cursor: pointer;
			text-decoration: none;
			.no-select;
		}

		.folium {
			font-weight: 500;
			font-size: 18px;
		}
	}

}

#main {
	a {
		color: @bodyNavColor;
	}
}

.formatAsAnnotation {
	display: block;
	float: left;
	font-size: 11px;
	color: #777;
	font-family: sans-serif;
	width: 100px;
	line-height: 16px;
	font-style: normal;
	border-top: 2px solid #00B3B0;
	padding-top: 6px;
	background-color: white;
	z-index: 1;
	border-bottom: 1px dotted #00B3B0;
	opacity: .9;
	span {
		position: static;
		display: inline;
		float: none;
		border: none;
	}
	&:hover {
		z-index: 2;
		color: #333;
		opacity: 1;
	}
}

#text-view {
	width: @textViewWidth;
	margin: auto;

	.heading {
		padding-left: 172px; // left margin
		text-align: center;
		span.tekst {
			font-size: 20px;
			font-weight: 500;
		}
		.previous {
			float: left;
		}
		.next {
			float: right;
		}
	}
	.folium {
		border-top: 1px solid @viewMenuColor;
		margin-bottom: 34px;
		padding-top: 20px;
		position: relative;
		.left {
			float: left;
			font-size: 11px;
			h5 {
				color: @defaultGray;
				font-weight: normal;
				font-size: 11px;
				padding: 0;
				margin: 0 0 20px;
			}
			img {
				width: 70px;
				height: auto;
				margin-bottom: 7px;
				display: block;
			}
			.select-folium {
				display: inline-block;
				color: @bodyNavColor;
				.no-select;
			}
		}
		.right {
			margin-left: 173px;
			font-size: 18px;
			text-align: left;
		}
	}
	.noteright {
		left: 500px;
	}
}
/* ... */

